--- a/docs/server/01. ssl.md
+++ b/docs/server/01. ssl.md
@@ -24,7 +24,7 @@ sidebar_position: 2
 ## SSL 인증서 구매
 나는 가비아에서 SSL 인증서를 구매하였다. SSL 인증서를 구매할 수 있는 브랜드는 다양했다.(GlobalSign, SECTIGO, Digicert)
 
-회사에서 운영하는 서버 자체가 규모가 크지도 않았고, 가격대 별로 제공하는 기능도 거의 같았기에 제일 저렴한 상품을 구매하였다.
+회사에서 운영하는 서버 자체가 규모가 크지도 않았고, 가격대 별로 제공하는 기능도 거의 같았기 때문에 제일 저렴한 상품을 구매하였다.
 
 ![img1](../../static/img/docs/server/ssl/01-인증서구매.png)
 
