--- a/docs/server/01. ssl.md
+++ b/docs/server/01. ssl.md
@@ -1,5 +1,8 @@
 ---
+# slug: about
 sidebar_position: 2
+authors: [wallybum]
+tags: [Ubuntu, Server, SSL, Apache]
 ---
 # SSL 인증서 적용
 ## 서버 환경
@@ -7,24 +10,24 @@ sidebar_position: 2
 - Apache : Apache/2.4.29
 
 ## SSL 인증서 적용 계기
-회사에서 서비스중인 애플리케이션이 있다. 이 애플리케이션을 다운로드 받기 위해서는 다음의 과정을 거친다.
+회사에서 서비스 중인 애플리케이션이 있다. 이 애플리케이션을 다운로드받기 위해서는 다음의 과정을 거친다.
 
 1. 이용자는 홈페이지에서 이름, 연락처, 이메일 등을 입력하고 다운로드 버튼을 누른다.
 2. 입력한 이메일로 다운로드 링크가 포함된 메일이 도착한다.
 3. 메일에서 다운로드를 클릭하여 애플리케이션을 내려받는다.
 
-이 때, 사용자가 사용중인 메일 공급업체의 서버 -> 회사 다운로드 서버로 접근한다.
+이때, 사용자가 사용 중인 메일 공급업체의 서버 -> 회사 다운로드 서버로 접근한다.
 
-[여기](https://security.googleblog.com/2020/02/protecting-users-from-insecure_6.html)에 따르면 Google은 https로 설정된 웹사이트에서 http 콘텐츠가 포함된 혼합 컨텐츠(Mixed Content)를 차단할 것이라고 예고 하였으며, 혼합 컨텐츠의 타입은 Chrome 81 부터 순차적으로 차단한다고 하였다.
+[여기](https://security.googleblog.com/2020/02/protecting-users-from-insecure_6.html)에 따르면 Google은 https로 설정된 웹사이트에서 http 콘텐츠가 포함된 혼합 콘텐츠(Mixed Content)를 차단할 것이라고 예고하였으며, 혼합 콘텐츠의 타입은 Chrome 81부터 순차적으로 차단한다고 하였다.
 
-회사에서 제공하는 컨텐츠는 .exe 파일이였는데, Chrome 83 부터는 Block되어, 이용자들이 애플리케이션을 다운받을 수 없게 된다.
+회사에서 제공하는 콘텐츠는 .exe 파일이었는데, Chrome 83부터는 Block 되어, 이용자들이 애플리케이션을 다운받을 수 없게 된다.
 
 그렇기 때문에 다운로드 서버에 SSL을 적용해야만 했다.
 
 ## SSL 인증서 구매
-나는 가비아에서 SSL 인증서를 구매하였다. SSL 인증서를 구매할 수 있는 브랜드는 다양했다.(GlobalSign, SECTIGO, Digicert)
+나는 가비아에서 SSL 인증서를 구매하였다. SSL 인증서를 구매할 수 있는 브랜드는 다양했다. (GlobalSign, SECTIGO, Digicert)
 
-회사에서 운영하는 서버 자체가 규모가 크지도 않았고, 가격대 별로 제공하는 기능도 거의 같았기 때문에 제일 저렴한 상품을 구매하였다.
+회사에서 운영하는 서버 자체가 규모가 크지도 않았고, 가격대별로 제공하는 기능도 거의 같았기 때문에 제일 저렴한 상품을 구매하였다.
 
 ![img1](../../static/img/docs/server/ssl/01-인증서구매.png)
 
@@ -48,8 +51,8 @@ CSR은 새로 생성하였고, 도메인은 www로 시작하지 않기 때문에
 
 관리 콘솔 바로 가기를 클릭하고, 본인 인증 뒤 인증서와 개인키 파일들 다운로드 받는다.
 
-## 인증서 CSR 코드 및 개인키 유효성 검증
-인증서 파일을 다운로드 받고, 압축을 풀면 다음의 파일들로 구성된다.
+## 인증서 CSR 코드 및 개인키 유효성 검증(생략 가능)
+인증서 파일을 다운로드받고, 압축을 풀면 다음의 파일들로 구성된다.
 
 - 도메인_cert.crt
 - 도메인_chain_cert.crt
@@ -70,13 +73,13 @@ openssl rsa -in 도메인.key -modulus -noout | openssl md5
 openssl x509 -in 도메인_cert.crt -modulus -noout | openssl md5
 ```
 
-두 파일간의 값이 일치해야한다.
+두 파일 간의 값이 일치해야 한다.
 
 ![img5](../../static/img/docs/server/ssl/05-유효성검증.png)
 
 ## 인증서 설치
 ### 인증서 파일 업로드
-다운로드 받은 파일들을 적당한 위치로 옮겨준다. 나의 경우 **/usr/share/ca-certficates/도메인/** 경로로 옮겼다. 옮긴 파일들은 다음과 같다
+다운로드받은 파일들을 적당한 위치로 옮겨준다. 나의 경우 **/usr/share/ca-certficates/도메인/** 경로로 옮겼다. 옮긴 파일들은 다음과 같다
 
 - 도메인_.crt
 - 도메인.key
