PostgreSQL 11 이전버전에서 Procedure 생성 글 작성

--- a/docs/database/PostgreSQL/01. create-procedure-in-postgresql-version11-earller.md
+++ b/docs/database/PostgreSQL/01. create-procedure-in-postgresql-version11-earller.md
@@ -3,7 +3,7 @@ sidebar_position: 2
 authors: [wallybum]
 tags: [Database, PostgreSQL, Function, Procedure]
 ---
-# Function & Procedure
+# PostgreSQL 11 이전 버전에서 Procedure 생성
 
 ## 데이터베이스 환경
 - Postgresql 9.2, PostgreSQL 11 이상
